# Umgebung

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE.md  README.md  Umgebung.sln  Umgebung.vcxproj  Umgebung.vcxproj.filters  directory.txt  imgui_PRESET.ini  vcpkg-configuration.json  vcpkg.json
assets/config/: CameraLevels.json  config.json
assets/icon/: Umgebung.rc  resource.rc
assets/models/: Cube.glb  Dodecahedron.glb  Icosahedron.glb  Octahedron.glb  Sphere.glb  Tetrahedron.glb
assets/scenes/: micro_particles_1000.umgebung  multi_scale_objects.umgebung
assets/shaders/: CubePS.hlsl  CubeVS.hlsl  debug.frag  debug.vert  point_lod.frag  point_lod.vert  simple.frag  simple.vert
cmake/: copy_shaders.cmake
docs/: ModelConcepts.md
docs/design/: ModelConcepts.md
include/: Camera.h  Game.h  SkyboxEffect.h  Window.hpp  pch.h
include/core/: Application.h  Input.h  Physics.h  Renderer.h
include/rendering/: VulkanRenderer.hpp
include/systems/: SceneManager.h  UIManager.h
include/umgebung/: Atom.hpp  Boson.hpp  Camera.h  Camera.hpp  Cell.hpp  CharmQuark.hpp  Constants.hpp  DownQuark.hpp  Ecosystem.hpp  Electron.hpp  ElementaryParticle.hpp  Galaxy.hpp  Lepton.hpp  Logger.h  Molecule.hpp  Multiverse.hpp  Neutron.hpp  Organism.hpp  Particle.hpp  Photon.hpp  PlanckSphericalUnit.hpp  Planet.hpp  Positron.hpp  Proton.hpp  QuantumVacuumFluctuation.hpp  Quark.hpp  Simulation.h  SolarSystem.hpp  Star.hpp  StrangeQuark.hpp  SubatomicParticle.hpp  SurfaceFeature.hpp  Universe.hpp  UpQuark.hpp
include/umgebung/app/: Application.hpp
include/umgebung/asset/: ModelLoader.hpp
include/umgebung/core/: Application.hpp  Atom.h  CelestialBody.h  PhysicalObject.h  Star.h
include/umgebung/cuda/: physics_kernels.h
include/umgebung/domain/: Galaxy.hpp  Multiverse.hpp  Particle.hpp  Planet.hpp  SolarSystem.hpp  Star.hpp  Universe.hpp
include/umgebung/ecs/components/: Collider.hpp  Consciousness.hpp  MicroBody.hpp  Name.hpp  PhryllComponent.hpp  Renderable.hpp  RigidBody.hpp  RigidBodyComponent.hpp  ScaleComponent.hpp  Soul.hpp  TimeComponent.hpp  Transform.hpp
include/umgebung/ecs/entities/: Galaxy.hpp  Multiverse.hpp  Particle.hpp  Planet.hpp  SolarSystem.hpp  Star.hpp  Universe.hpp
include/umgebung/ecs/systems/: AssetSystem.hpp  DebugRenderSystem.hpp  MacroPhysics.h  MicroPhysics.h  MultiverseSystem.hpp  ObserverSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScalarFieldSystem.hpp
include/umgebung/physics/: PhysicsWorld.hpp
include/umgebung/physx/: PhysXManager.h
include/umgebung/renderer/: Camera.hpp  DebugRenderer.hpp  Framebuffer.hpp  Mesh.hpp  Renderer.hpp
include/umgebung/renderer/gl/: Shader.hpp
include/umgebung/rendering/: Renderer.hpp
include/umgebung/scene/: Scene.hpp  SceneSerializer.hpp
include/umgebung/ui/: UI.hpp  UIManager.hpp  Window.hpp
include/umgebung/ui/imgui/: AboutPanel.hpp  AssetBrowserPanel.hpp  ConsolePanel.hpp  FilePickerPanel.hpp  HierarchyPanel.hpp  ImGuiConsoleSink.hpp  Panel.hpp  PropertiesPanel.hpp  StatisticsPanel.hpp  ViewportPanel.hpp
include/umgebung/util/: Config.hpp  CudaHelpers.hpp  JsonHelpers.hpp  LogMacros.hpp  Logger.hpp
include/umgebung/utils/: Logger.hpp
include/utils/: Logger.h
research/: Custom Built PC Specifications.txt  Zach wants to create an interactive.txt
src/: Camera.cpp  DeviceResources.cpp  Game.cpp  Main.cpp  RenderTexture.cpp  SkyboxEffect.cpp  Window.cpp  main.cpp  vk_engine.cpp  vk_engine.h  vk_types.h
src/Core/: Application.cpp  Application.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp
src/GUI/: GuiLayer.cpp  GuiLayer.hpp
src/Platform/: Window.cpp  Window.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/app/: Application.cpp  Main.cpp
src/asset/: ModelLoader.cpp
src/core/: Application.cpp  Input.cpp  Physics.cpp  Renderer.cpp
src/domain/: Galaxy.cpp  Galaxy.hpp  Multiverse.cpp  Multiverse.hpp  Particle.cpp  Planet.cpp  SolarSystem.cpp  SolarSystem.hpp  Star.cpp  Universe.cpp  Universe.hpp
src/ecs/: ECS.cpp
src/ecs/components/: Consciousness.cpp  Soul.cpp  TimeComponent.cpp  Transform.cpp
src/ecs/entities/: Galaxy.cpp  Multiverse.cpp  Particle.cpp  Planet.cpp  SolarSystem.cpp  Star.cpp  Universe.cpp
src/ecs/systems/: AssetSystem.cpp  DebugRenderSystem.cpp  MacroPhysics.cu  MicroPhysics.cu  MultiverseSystem.cpp  ObserverSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScalarFieldSystem.cpp
src/physics/: Physics.cpp
src/renderer/: Camera.cpp  DebugRenderer.cpp  Framebuffer.cpp  Mesh.cpp  Renderer.cpp
src/renderer/gl/: Shader.cpp
src/rendering/: VulkanRenderer.cpp
src/scene/: Scene.cpp  SceneSerializer.cpp
src/systems/: SceneManager.cpp  UIManager.cpp
src/ui/: UIManager.cpp  Window.cpp  Window.hpp
src/ui/imgui/: AboutPanel.cpp  AssetBrowserPanel.cpp  ConsolePanel.cpp  FilePickerPanel.cpp  HierarchyPanel.cpp  Panel.cpp  PropertiesPanel.cpp  StatisticsPanel.cpp  ViewportPanel.cpp
src/umgebung/: AntiUpQuark.cpp  Atom.cpp  Boson.cpp  Camera.cpp  Cell.cpp  CharmQuark.cpp  Consciousness.cpp  DownQuark.cpp  Ecosystem.cpp  Electron.cpp  ElementaryParticle.cpp  Galaxy.cpp  Lepton.cpp  Molecule.cpp  Multiverse.cpp  Neutron.cpp  Organism.cpp  Particle.cpp  Phonon.cpp  Photon.cpp  Phryll.cpp  PlanckSphericalUnit.cpp  Planet.cpp  Positron.cpp  Proton.cpp  QuantumVacuumFluctuation.cpp  Quark.cpp  Simulation.cpp  SolarSystem.cpp  Star.cpp  StrangeQuark.cpp  SubatomicParticle.cpp  SurfaceFeature.cpp  Universe.cpp  UpQuark.cpp
src/umgebung/cuda/: physics_kernels.cu
src/util/: ConfigManager.cpp  LogMacros.hpp  Logger.cpp  Logger.hpp
src/utils/: Logger.cpp
src/walbourn/: Animation.cpp  DebugDraw.cpp  DeviceResources.cpp  MSAAHelper.cpp  RenderTexture.cpp  SkyboxEffect.cpp  TextConsole.cpp  pch.cpp
triplets/: x64-windows-custom.cmake
